--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Your Figma Plugin",
   "main": "code.js",
   "scripts": {
+    "serve": "cross-env NODE_ENV=serve webpack serve",
     "dev": "cross-env NODE_ENV=development webpack --watch",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "author": "",
-  "license": "",
+  "license": "MIT",
   "devDependencies": {
     "@figma/plugin-typings": "^1.19.0",
     "@types/node": "^14.14.6",
@@ -31,7 +32,8 @@
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "webpack": "^5.5.1",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "clsx": "^1.1.1",
