--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "typescript": "^4.1.2",
     "webpack": "^5.5.1",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "postcss-loader": "^4.0.4"
   },
   "dependencies": {
     "clsx": "^1.1.1",
-    "image-to-slices": "^0.1.3",
     "path-browserify": "^1.0.1",
-    "postcss-loader": "^4.0.4",
     "preact": "^10.5.5",
+    "slices": "^0.1.4",
     "tailwindcss": "^1.9.6"
   }
 }
