--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "slice-image-plugin",
+  "name": "split-image-figma-plugin",
   "version": "1.0.0",
-  "description": "Your Figma Plugin",
+  "description": "split image figma plugin",
   "main": "code.js",
   "scripts": {
     "serve": "cross-env NODE_ENV=serve webpack serve",
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "^5.0.0-alpha.14",
     "mini-css-extract-plugin": "^1.3.1",
     "postcss": "^8.1.4",
+    "postcss-loader": "^4.0.4",
     "prettier": "^2.1.2",
     "react-dev-utils": "^11.0.0",
     "style-loader": "^2.0.0",
@@ -33,11 +34,11 @@
     "typescript": "^4.1.2",
     "webpack": "^5.5.1",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
-    "postcss-loader": "^4.0.4"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "clsx": "^1.1.1",
+    "nanoid": "^3.1.18",
     "path-browserify": "^1.0.1",
     "preact": "^10.5.5",
     "slices": "^0.1.4",
